# api-buddy

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
api_buddy/: __init__.py  cli.py  constants.py  exceptions.py  preferences.py  request.py  response.py  typing.py  utils.py
api_buddy/config/: help.py  options.py  preferences.py  themes.py  variables.py
api_buddy/network/: request.py  response.py  session.py
api_buddy/network/auth/: oauth2.py
api_buddy/session/: oauth.py  request.py  response.py
api_buddy/utils/: __init__.py  auth.py  exceptions.py  formatting.py  http.py  spin.py  typing.py
api_buddy/validation/: options.py  preferences.py
docs/: authentication.md  oauth2.md  preferences.md  variables.md
tests/: helpers.py  test_api_buddy.py  test_exceptions.py  test_preferences.py  test_ttam_buddy.py  test_utils.py  utils.py
tests/config/: test_options.py  test_preferences.py  test_variables.py
tests/fixtures/: api_url_with_hash_fragment.yaml  api_url_with_hash_fragment.yml  api_url_with_query_string.yaml  api_url_with_query_string.yml  api_url_without_scheme.yml  api_version_as_int.yaml  api_version_as_int.yml  api_version_as_str.yaml  api_version_as_str.yml  bad.yml  bad_theme.yaml  bad_types.yaml  bad_types.yml  bool_authorize_param_name.yml  bool_authorize_param_value.yml  bool_variable_name.yaml  bool_variable_name.yml  bool_variable_value.yml  happy_authorize_params.yml  happy_headers.yaml  happy_variables.yaml  happy_variables.yml  int_authorize_params.yml  missing_equals_authorize_params.yml  missing_fields.yml  nested_dict_authorize_params.yml  nested_dict_variables.yml  nested_list_authorize_params.yml  nested_list_variables.yml  no_auth.yml  no_theme.yaml  nonsense.yml  oauth3.yml  pygment_theme.yaml  shellectric_theme.yaml  special_chars_variable_name.yaml  special_chars_variable_name.yml  test.yaml  test.yml
tests/network/: test_request.py  test_response.py  test_session.py
tests/network/auth/: test_oauth2_session.py
tests/oauth/: test_session.py
tests/session/: test_oauth_session.py  test_request.py  test_response.py
tests/utils/: test_api_url_join.py  test_flat_str_dict.py  test_format_dict_like_thing.py  test_format_json_with_title.py  test_highlight_syntax.py  test_query_params.py  test_utils.py
ttam_buddy/: cli.py  constants.py  preferences.py
ttam_buddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ttam_buddy/oauth/: session.py
