[tool.poetry]
name = "api-buddy"
version = "0.2.0"
description = "Explore APIs from your console with API Buddy"
authors = ["Peter Fonseca <peter.nfonseca@gmail.com>"]
license = "MIT"
repository = "https://github.com/fonsecapeter/api-buddy"
documentation = "https://poetry.eustace.io/docs"
readme = "README.md"
keywords = [
  "api_buddy",
  "api-buddy",
  "api",
  "apibuddy",
  "cli",
  "oauth2",
  "terminal",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7.1"
docopt = "^0.6.2"
requests-oauthlib = "^1.2.0"
schema = "^0.6.8"
PyYAML = "=4.2b1"
yaspin = "^0.14.1"
colorama = "^0.4.1"
Pygments = "^2.3"

[tool.poetry.dev-dependencies]
colorama = "^0.4.1"
flake8 = "^3.7.5"
ipython = "^7.2.0"
mock = "^2.0.0"
mypy = "^0.670"
pytest = "^4.2.0"
pytest-cov = "^2.6.1"
pytest-pspec = "^0.0.3"
bumpversion = "^0.5.3"

[tool.poetry.scripts]
api = "api_buddy.cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
