[tool.poetry]
name = "api-buddy"
version = "0.5.0"
description = "Explore APIs from your console with API Buddy"
authors = ["Peter Fonseca <peter.nfonseca@gmail.com>"]
license = "MIT"
repository = "https://github.com/fonsecapeter/api-buddy"
documentation = "https://poetry.eustace.io/docs"
readme = "README.md"
keywords = [
  "api_buddy",
  "api-buddy",
  "api",
  "apibuddy",
  "cli",
  "oauth2",
  "terminal",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.13.1"
beautifulsoup4 = "^4.7.1"
docopt = "^0.6.2"
requests-oauthlib = "^2.0.0"
schema = "^0.6.8"
PyYAML = "6.0.2"
yaspin = "^0.14.1"
colorama = "^0.4.6"
Pygments = "^2.19.1"
poetry = "1.6.0"

[tool.poetry.dev-dependencies]
types-requests = "^2.32.0.20241016"
types-PyYAML = "^6.0.12.20241230"
flake8 = "^7.1.1"
ipython = "^7.2.0"
mock = "^5.1.0"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-pspec = "^0.0.4"
bumpversion = "^0.6.0"

[tool.poetry.scripts]
api = "api_buddy.cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
