[project]
name = "api-buddy"
version = "1.0.1"
description = "The most pleasant HTTP API CLI tool"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Peter Fonseca", email = "peter.nfonseca@gmail.com" },
]
keywords = [
  "api_buddy",
  "api-buddy",
  "api",
  "apibuddy",
  "cli",
  "cool",
  "http",
  "json",
  "oauth2",
  "requests",
  "terminal",
  "tool",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
scripts = { api = "api_buddy.cli:run" }
requires-python = "~= 3.13.1"
dependencies = [
  "beautifulsoup4 ~= 4.7.1",
  "docopt ~= 0.6.2",
  "requests-oauthlib ~= 2.0.0",
  "schema ~=0.6.8",
  "PyYAML ~=6.0.2",
  "yaspin ~=0.14.1",
  "colorama ~=0.4.6",
  "Pygments ~=2.19.1",
  "mypy-extensions (>=1.0.0,<2.0.0)",
  "black (>=24.10.0,<25.0.0)",
]

[project.urls]
repository = "https://github.com/fonsecapeter/api-buddy"
documentation = "https://poetry.eustace.io/docs"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20241016"
types-PyYAML = "^6.0.12.20241230"
flake8 = "^7.1.1"
ipython = "^8.31.0"
mock = "^5.1.0"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-pspec = "^0.0.4"
bumpversion = "^0.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
